--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,89 @@
+alembic==1.15.1
 altair==5.5.0
+arabic-reshaper==3.0.0
+asgiref==3.8.1
+asn1crypto==1.5.1
 attrs==25.3.0
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+cryptography==44.0.2
+cssselect2==0.8.0
+defusedxml==0.7.1
+Django==5.1.7
+django-bootstrap5==25.1
+dnspython==2.7.0
+email_validator==2.2.0
+et_xmlfile==2.0.0
+Flask==3.1.0
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-Principal==0.4.0
+Flask-Security-Too==5.6.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
 gitdb==4.0.12
 GitPython==3.1.44
+greenlet==3.1.1
+gunicorn==23.0.0
+html5lib==1.1
 idna==3.10
+importlib_resources==6.5.2
+itsdangerous==2.2.0
 Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+lxml==5.3.1
+Mako==1.3.9
 MarkupSafe==3.0.2
 narwhals==1.31.0
 numpy==2.2.4
+openpyxl==3.1.5
+oscrypto==1.3.0
 packaging==24.2
 pandas==2.2.3
+passlib==1.7.4
 pillow==11.1.0
 protobuf==5.29.4
 pyarrow==19.0.1
+pycparser==2.22
 pydeck==0.9.1
+pyHanko==0.26.0
+pyhanko-certvalidator==0.26.8
+pypdf==5.4.0
+python-bidi==0.6.6
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2025.1
+PyYAML==6.0.2
+qrcode==8.0
 referencing==0.36.2
+reportlab==4.3.1
 requests==2.32.3
 rpds-py==0.23.1
 six==1.17.0
 smmap==5.0.2
+SQLAlchemy==2.0.39
+sqlparse==0.5.3
 streamlit==1.43.2
+svglib==1.5.1
 tenacity==9.0.0
+tinycss2==1.4.0
 toml==0.10.2
 tornado==6.4.2
 typing_extensions==4.12.2
 tzdata==2025.2
+tzlocal==5.3.1
+uritools==4.0.3
 urllib3==2.3.0
 watchdog==6.0.0
+webencodings==0.5.1
+Werkzeug==3.1.3
+WTForms==3.2.1
+xhtml2pdf==0.2.17
 XlsxWriter==3.2.2
